feat(backend): add or remove bingo card from bingo board
