# backend/docs/swagger.json
@@ -41,7 +41,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.CreateBingoBoardDto"
+                            "$ref": "#/definitions/models.CreateBingoBoardDto"
                         }
                     }
                 ],
@@ -122,6 +122,52 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.UserDto"
+                        }
+                    }
+                }
+            }
+        },
+        "/bingoBoard/{id}/addBingoCard": {
+            "put": {
+                "security": [
+                    {
+                        "Token": []
+                    }
+                ],
+                "description": "Add a bingo card to a bingo board.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bingo Board"
+                ],
+                "summary": "Add bingo card.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bingo Board ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Bingo Card UUID",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.BingoCardId"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -225,6 +271,38 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create a bingo card.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bingo Card"
+                ],
+                "summary": "Create a bingo card.",
+                "parameters": [
+                    {
+                        "description": "Bingo Card",
+                        "name": "bingoCard",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.CreateBingoCardDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.BingoCardDto"
+                        }
+                    }
+                }
             }
         },
         "/me": {
@@ -294,10 +372,13 @@
         }
     },
     "definitions": {
-        "controllers.CreateBingoBoardDto": {
+        "controllers.CreateBingoCardDto": {
             "type": "object",
+            "required": [
+                "description"
+            ],
             "properties": {
-                "name": {
+                "description": {
                     "type": "string"
                 }
             }
@@ -326,13 +407,32 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "selected": {
                     "type": "boolean"
                 },
                 "user_count": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.BingoCardId": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateBingoBoardDto": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
                 }
             }
         },
